[gd_scene load_steps=12 format=3 uid="uid://dey2661g5bpqr"]

[ext_resource type="Script" uid="uid://bgwuou67gglhu" path="res://scripts/main.gd" id="1"]
[ext_resource type="Script" uid="uid://blkry3skl274l" path="res://scripts/ui/shop_ui.gd" id="2"]
[ext_resource type="Script" uid="uid://c1gddxlphnd6" path="res://scripts/ui/hud_controller.gd" id="3"]
[ext_resource type="Script" uid="uid://cevw1koy1o8ll" path="res://scripts/grid/battle_grid.gd" id="4"]
[ext_resource type="Script" uid="uid://c560ifvwjcu57" path="res://scripts/battle/battle_manager.gd" id="5"]
[ext_resource type="Texture2D" uid="uid://biunekqle4mqi" path="res://assets/maps/bg-field.png" id="6"]
[ext_resource type="PackedScene" path="res://scenes/ui/map_ui.tscn" id="7"]
[ext_resource type="Script" uid="uid://uryrs3ixllum" path="res://scripts/ui/capture_ui.gd" id="8"]
[ext_resource type="Script" uid="uid://dn6evie5x6wsx" path="res://scripts/ui/bench_ui.gd" id="9"]
[ext_resource type="PackedScene" uid="uid://cfujk3q0mhwdc" path="res://scenes/ui/item_inventory_ui.tscn" id="10_ya4ey"]
[ext_resource type="PackedScene" uid="uid://bpk8wmj4n2yrq" path="res://scenes/ui/spirit_info_ui.tscn" id="11_eb6dy"]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("6")
expand_mode = 1
stretch_mode = 6

[node name="BattleScene" type="Node2D" parent="."]
position = Vector2(400, 250)

[node name="BattleManager" type="Node" parent="BattleScene"]
script = ExtResource("5")

[node name="AllyGrid" type="Node2D" parent="BattleScene"]
position = Vector2(-150, 0)
script = ExtResource("4")
slot_size = Vector2(80, 80)
slot_spacing = 10.0

[node name="EnemyGrid" type="Node2D" parent="BattleScene"]
position = Vector2(150, 0)
script = ExtResource("4")
slot_size = Vector2(80, 80)
slot_spacing = 10.0
is_ally_grid = false

[node name="VSLabel" type="Label" parent="BattleScene"]
offset_left = -30.0
offset_top = -20.0
offset_right = 30.0
offset_bottom = 20.0
text = "VS"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ShopUI" type="Control" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -150.0
grow_horizontal = 2
grow_vertical = 0
script = ExtResource("2")

[node name="ShopBackground" type="Panel" parent="ShopUI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ShopContainer" type="HBoxContainer" parent="ShopUI"]
layout_mode = 1
offset_left = 20.0
offset_top = 10.0
offset_right = 500.0
offset_bottom = 140.0
theme_override_constants/separation = 20

[node name="GoldLabel" type="Label" parent="ShopUI"]
layout_mode = 0
offset_left = 550.0
offset_top = 20.0
offset_right = 700.0
offset_bottom = 50.0
text = "Gold: 10"

[node name="RerollButton" type="Button" parent="ShopUI"]
layout_mode = 0
offset_left = 550.0
offset_top = 60.0
offset_right = 700.0
offset_bottom = 100.0
text = "Reroll (1G)"

[node name="SellZone" type="Panel" parent="ShopUI"]
layout_mode = 0
offset_left = 720.0
offset_top = 20.0
offset_right = 780.0
offset_bottom = 130.0
tooltip_text = "Drag spirit here to sell"

[node name="SellLabel" type="Label" parent="ShopUI/SellZone"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "üóëÔ∏è
SELL"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HUD" type="CanvasLayer" parent="."]
script = ExtResource("3")

[node name="TopBar" type="HBoxContainer" parent="HUD"]
offset_right = 800.0
offset_bottom = 50.0
theme_override_constants/separation = 50

[node name="GoldLabel" type="Label" parent="HUD/TopBar"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
text = "üí∞ 10"

[node name="WaveLabel" type="Label" parent="HUD/TopBar"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
text = "Wave 1/4"
horizontal_alignment = 1

[node name="PhaseLabel" type="Label" parent="HUD/TopBar"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
text = "üéØ Select Starter"
horizontal_alignment = 2

[node name="BattleTimer" type="Label" parent="HUD"]
visible = false
offset_left = 350.0
offset_top = 200.0
offset_right = 450.0
offset_bottom = 240.0
text = "60.0"
horizontal_alignment = 1

[node name="StartBattleButton" type="Button" parent="HUD"]
offset_left = 650.0
offset_top = 250.0
offset_right = 780.0
offset_bottom = 290.0
text = "‚öîÔ∏è Start Battle"

[node name="FloatingTextContainer" type="Node2D" parent="HUD"]

[node name="StarterSelection" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="StarterBackground" type="Panel" parent="StarterSelection"]
modulate = Color(0, 0, 0, 0.7)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TitleLabel" type="Label" parent="StarterSelection"]
layout_mode = 1
offset_left = 200.0
offset_top = 50.0
offset_right = 600.0
offset_bottom = 100.0
text = "Choose Your Starter Spirit"
horizontal_alignment = 1

[node name="StarterContainer" type="HBoxContainer" parent="StarterSelection"]
layout_mode = 1
offset_left = 100.0
offset_top = 150.0
offset_right = 700.0
offset_bottom = 400.0
theme_override_constants/separation = 50

[node name="GameOverScreen" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="GameOverBackground" type="Panel" parent="GameOverScreen"]
modulate = Color(0, 0, 0, 0.8)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TitleLabel" type="Label" parent="GameOverScreen"]
layout_mode = 1
offset_left = 250.0
offset_top = 150.0
offset_right = 550.0
offset_bottom = 220.0
text = "GAME OVER"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RestartButton" type="Button" parent="GameOverScreen"]
layout_mode = 0
offset_left = 300.0
offset_top = 300.0
offset_right = 500.0
offset_bottom = 350.0
text = "üîÑ Play Again"

[node name="MapUI" parent="." instance=ExtResource("7")]
visible = false
layout_mode = 1

[node name="CaptureUI" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("8")

[node name="Background" type="Panel" parent="CaptureUI"]
modulate = Color(0, 0, 0, 0.85)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TitleLabel" type="Label" parent="CaptureUI"]
layout_mode = 0
offset_left = 150.0
offset_top = 50.0
offset_right = 650.0
offset_bottom = 100.0
text = "‚ú® VICTORY! ‚ú®"
horizontal_alignment = 1

[node name="SubtitleLabel" type="Label" parent="CaptureUI"]
layout_mode = 0
offset_left = 100.0
offset_top = 110.0
offset_right = 700.0
offset_bottom = 140.0
text = "Choose a spirit to purify and capture:"
horizontal_alignment = 1

[node name="SpiritsContainer" type="HBoxContainer" parent="CaptureUI"]
layout_mode = 0
offset_left = 100.0
offset_top = 160.0
offset_right = 700.0
offset_bottom = 400.0
theme_override_constants/separation = 20
alignment = 1

[node name="SkipButton" type="Button" parent="CaptureUI"]
layout_mode = 0
offset_left = 300.0
offset_top = 420.0
offset_right = 500.0
offset_bottom = 460.0
text = "Skip Capture"

[node name="BenchUI" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -110.0
grow_horizontal = 2
grow_vertical = 0
script = ExtResource("9")

[node name="Background" type="Panel" parent="BenchUI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TitleLabel" type="Label" parent="BenchUI"]
layout_mode = 0
offset_left = 10.0
offset_top = 5.0
offset_right = 200.0
offset_bottom = 25.0
text = "üéí Bench (0/8)"

[node name="SlotsContainer" type="HBoxContainer" parent="BenchUI"]
layout_mode = 0
offset_left = 10.0
offset_top = 30.0
offset_right = 700.0
offset_bottom = 100.0
theme_override_constants/separation = 8

[node name="ItemInventoryUI" parent="." instance=ExtResource("10_ya4ey")]
anchors_preset = 0

[node name="SpiritInfoUI" parent="." instance=ExtResource("11_eb6dy")]
layout_mode = 0
